grammar/meincraft.g4
grammar meincraft;

prog: stat+ ;

stat
    : ID '=' expr ';'                         # AssignStat
    | 'print' expr ';'                        # PrintStat
    | ID '=' 'read' ';'                       # ReadStat
    | ID (LBRACK expr RBRACK)+ '=' expr ';'   # ArrayAssignStat
    | 'if' '(' cond=expr ')' 'then:' ifBranch+=stat+
      ('elif' '(' elifCond+=expr ')' 'then:' elifBranch+=stat+)* 
      ('else:' elseBranch+=stat+)? 'end'      # IfStat
    | 'for' '(' ID '=' expr 'to' ID '=' expr ')' 'do:' stat+ 'end' #ForStat
    | 'while' '(' expr ')' 'do:' stat+ 'end'  # WhileStat
    ;

expr
  : expr '==' expr                      # EqExpr
  | LBRACK exprList? RBRACK             # ArrayLiteral
  | expr AND expr                       # AndExpr
  | expr OR expr                        # OrExpr
  | expr XOR expr                       # XorExpr
  | expr NEG                            # NegExpr
  | TRUE                                # TrueExpr
  | FALSE                               # FalseExpr
  | STRING                              # StringExpr
  | expr '*' expr                        # MulExpr
  | expr '/' expr                        # DivExpr
  | expr '+' expr                        # AddExpr
  | expr '-' expr                        # SubExpr
  | ID (LBRACK expr RBRACK)+             # ArrayAccess
  | INT                                  # IntExpr
  | FLOAT                                # FloatExpr
  | ID                                   # IdExpr
  | '(' expr ')'                         # ParensExpr
  | 'read'                               # ReadExpr
  ;

exprList
  : expr (COMMA expr)* ;

TRUE   : 'true';
FALSE  : 'false';
AND     : 'AND';
OR      : 'OR';
XOR     : 'XOR';
NEG     : 'NEG';
STRING : '"' ( ~["\\\r\n] )* '"' ;
ID  : [a-zA-Z]+ ;
INT : [0-9]+ ;
FLOAT : [0-9]+ '.' [0-9]+;
WS  : [ \t\r\n]+ -> skip ;
LBRACK : '[' ;
RBRACK : ']' ;
COMMA  : ',' ;
